Fix cropped text on ScrollView

--- a/src/react-chayns-scrollview/index.scss
+++ b/src/react-chayns-scrollview/index.scss
@@ -51,6 +51,7 @@
   &--hidden {
     .cc__scroll-view__content {
       overflow: hidden !important;
+      width: 100% !important;
     }
   }
 
